<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.fragments.SignUpFragment"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="92dp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/primary_color"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/ln"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">


        <EditText
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/ed_full_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/full_name"
            android:background="@drawable/custom_button"/>

        <EditText
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/ed_user_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/username"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintEnd_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@id/guideline4"
            android:background="@drawable/custom_button"/>

        <EditText
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            android:background="@drawable/custom_button"/>

        <EditText
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/ed_phone_number"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/phone_number"
            android:background="@drawable/custom_button"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/custom_button"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/custom_button"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ed_confirm_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_button"
            android:hint="@string/confirm_password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@drawable/custom_button"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/signup"
            android:layout_margin="10dp"
            app:backgroundTint="@color/primary_color"
            android:background="@drawable/custom_button"/>

        <TextView
            android:id="@+id/tvBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="25dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>