<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:id="@+id/lnGreeting"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_Avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_person_4_24"
                android:contentDescription="@string/avatar" />

            <Space
                android:layout_width="10dp"
                android:layout_height="1dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/tvCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/greeting"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>

        <Space
            android:id="@+id/spacer1"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnGreeting"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spacer1"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            android:elevation="10dp"
            app:cardBackgroundColor="#DBE2E9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:text="@string/schedule_your_dental_nfree_check_up_today"
                        android:textColor="#507D8E"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/btnScheduleNow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/schedule_now"
                        android:textColor="@color/white"
                        android:background="@drawable/custom_button"
                        app:backgroundTint="@color/primary_color"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/dentist"
                    android:contentDescription="@string/imagebanner" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineStart"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="310dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineEnd"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_begin="323dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:id="@+id/tvService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spacer2"
            android:text="@string/service"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tvViewAllServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvService"
            app:layout_constraintBottom_toBottomOf="@id/tvService"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:id="@+id/lnServices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvService">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewBooking"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="20dp"
                android:backgroundTint="#E6E3C8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/baseline_calendar_month_24"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/booking"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="20dp"
                android:backgroundTint="#C9FBEB">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@mipmap/ic_launcher"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/scaling"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvContactSP"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="20dp"
                android:backgroundTint="#C9FBEB">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/ic_phone"/>
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:text="@string/support"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <TextView
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:id="@+id/tvDoctors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lnServices"
            android:text="@string/doctors"
            android:textStyle="bold"
            android:textSize="20sp"/>

        <TextView
            android:textColor="@color/black"
            android:id="@+id/tvViewAllDoctors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_all"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvDoctors"
            app:layout_constraintBottom_toBottomOf="@id/tvDoctors"
            android:layout_marginEnd="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="10dp"
            android:id="@+id/rvDoctors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDoctors"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


