<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.fragments.LoginFragment"
    android:layout_margin="10dp"
    >

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="53dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="360dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="92dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="383dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="310dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circle_center"
        android:layout_height="0dp"
        android:layout_width="300dp"
        android:src="@drawable/ic_logo"
        app:civ_border_width="1dp"
        app:civ_border_color="#CCCCCC"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/circle_center"
        app:layout_constraintEnd_toEndOf="@id/circle_center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        android:textStyle="bold"
        android:textColor="@color/primary_color"
        android:gravity="center"
        android:textSize="30sp"/>

    <EditText
        android:padding="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/ed_user_name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/guideline4"
        android:background="@drawable/custom_button"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:layout_constraintTop_toBottomOf="@id/ed_user_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/custom_button"/>
    </com.google.android.material.textfield.TextInputLayout>

    
    <LinearLayout
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/ed_password_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/login"
            android:layout_margin="10dp"
            app:backgroundTint="@color/primary_color"
            android:background="@drawable/custom_button"/>

       <TextView
           android:id="@+id/tvDontHaveAccount"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/don_t_have_account_create_a_one"
           android:textSize="18sp"
           android:textAlignment="center"
           android:layout_marginTop="45dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>